src/frontend/parser/parser.rs
//! Nom parsers used to generate the Itsy AST.

pub mod error;
mod nomutil;
pub mod types;

use nom::character::{complete::{char, digit0, one_of}, is_alphabetic, is_alphanumeric, is_digit};
use nom::bytes::complete::{take_while, take_while1, tag};
use nom::combinator::{recognize, opt, all_consuming, map, not, verify};
use nom::multi::{separated_list0, separated_list1, many0, fold_many0, fold_many1};
use nom::branch::alt;
use nom::sequence::{tuple, pair, delimited, preceded, terminated};
use crate::{prelude::*, internals::resolved::ids::BindingId};
use crate::shared::{numeric::Numeric, path_to_parts, parts_to_path};
use crate::frontend::ast::*;
use types::{Input, Output, Failure, ParserFlags, ParsedModule, ParsedProgram, ScopeBindingType, ScopeKind, VarDecl, LinkState};
use error::{ParseResult, ParseError, ParseErrorKind};
use nomutil::*;

/// List of keywords that are not legal identifier.
const KEYWORDS: &[ &'static str ] = &[
    "as",
    "break",
    "const",
    "continue",
    "enum",
    "false",
    "fn",
    "for",
    "if",
    "impl",
    "let",
    "match",
    "mod",
    "mut",
    "pub",
    "return",
    "struct",
    "trait",
    "true",
    "use",
    "while",
];

/// Runs the given parser. If the parser succeeds the given checker function is run. If it returns true, the parser result is returned, otherwise a failure.
fn check_flags<'a, O, P, C>(mut parser: P, checker: C) -> impl FnMut(Input<'a>) -> Output<'a, O>
where
    P: nom::Parser<Input<'a>, O, Failure<'a>>,
    C: Fn(ParserFlags) -> Option<ParseErrorKind>
{
    move |input: Input<'_>| {
        let before = input.clone();
        let inner_result = parser.parse(input)?;

        if let Some(kind) = checker(before.flags()) {
            Err(nom::Err::Failure(Failure { input: before, kind: kind }))
        } else {
            Ok(inner_result)
        }
    }
}

/// Calls the given function with a mutable reference to parser flags, then runs the given parser. Restores previous parser flags afterwards.
fn with_flags<'a, P: 'a, O: 'a>(s: &'a impl Fn(&mut ParserFlags), mut parser: P) -> impl FnMut(Input<'a>) -> Output<'a, O> where P: FnMut(Input<'a>) -> Output<'a, O> {
    move |input: Input<'_>| {
        use nom::Parser;
        let i = input.clone();
        let flags = i.flags();
        i.flags_mut(s);
        let inner_result = parser.parse(input);
        i.flags_mut(|s| *s = flags);
        inner_result
    }
}

/// Pushes a new scope to the scope stack before running the given parser. Pops scope afterwards.
fn with_scope<'a, P: 'a, O: 'a>(scope_type: ScopeKind, mut parser: P) -> impl FnMut(Input<'a>) -> Output<'a, O> where P: FnMut(Input<'a>) -> Output<'a, O> {
    move |input: Input<'_>| {
        use nom::Parser;
        let i = input.clone();
        let backup_state = i.push_scope(scope_type);
        let inner_result = parser.parse(input);
        i.pop_scope(if inner_result.is_ok() {
            None
        } else {
            Some(backup_state)
        });
        inner_result
    }
}

/// Snapshots binding id state, restores it if the inner parser fails.
fn snap<'a, P: 'a, O: 'a>(mut parser: P) -> impl FnMut(Input<'a>) -> Output<'a, O> where P: FnMut(Input<'a>) -> Output<'a, O> {
    move |input: Input<'_>| {
        use nom::Parser;
        let i = input.clone();
        let (next_binding_id, next_scope_id) = {
            let state = i.state.borrow();
            (state.link_state.next_binding_id, state.link_state.next_scope_id)
        };
        let inner_result = parser.parse(input);
        if inner_result.is_err() {
            let mut state = i.state.borrow_mut();
            if next_binding_id != state.link_state.next_binding_id {
                state.link_state.next_binding_id = next_binding_id;
                state.link_state.binding_ids.retain(|&binding_id| binding_id < next_binding_id);
                //state.scope_stack.last_mut().unwrap().have_bindings.retain(|_, &mut binding_id| binding_id < next_binding_id); // shouldn't be required
            }
            state.link_state.next_scope_id = next_scope_id;
        }
        inner_result
    }
}

/// Matches and returns a legal alphanumeric word and consumes optional trailing whitespace.
fn word(i: Input<'_>) -> Output<'_, &str> {
    map(
        // ([a-z_][a-z0-9_]*)
    terminated(
            recognize(pair(
                take_while1(|m| is_alphabetic(m as u8) || m == '_'),
                take_while(|m| is_alphanumeric(m as u8) || m == '_')
            )),
            space0
        ),
        move |l: Input<'_>| *l
    )(i)
}

/// Returns a parser that matches and returns the given string and consumes optional trailing whitespace.
fn punct<'a>(p: &'static str) -> impl FnMut(Input<'a>) -> Output<'a, &'a str> {
    map(terminated(tag(p), space0), |s: Input<'_>| *s)
}

/// Matches a valid identifier.
fn ident(i: Input) -> Output<Ident> {
    let position = i.position();
    map(
        verify(word, |input: &str| !KEYWORDS.contains(&input)),
        move |l| Ident {
            name: l.to_string(),
            position: position,
        }
    )(i)
}

/// Returns a parser that matches the given alphanumeric keyword. Requires the entire next alphanumeric token to match.
fn keyword<'a>(w: &'static str) -> impl FnMut(Input<'a>) -> Output<'a, &'a str> {
    verify(word, move |input: &str| w == input)
}

/// Matches a variable name and declares the variable in the current scope.
fn var_decl(i: Input) -> Output<VarDecl> {
    let j = i.clone();
    map(
        ident,
        move |ident| {
            let binding_id = if j.flags().is_dead {
                BindingId::new(0)
            } else {
                j.add_binding(&ident.name)
            };
            VarDecl {
                binding_id,
                ident,
            }
        }
    )(i)
}

/// Matches a path.
fn path(i: Input) -> Output<Path> {
    let position = i.position();
    map(separated_list1(punct("::"), ident), move |name| Path { position, segments: name })(i)
}

// Matches a module declaration, e.g. `mod mymodule;`.
fn module_decl(i: Input) -> Output<ModuleDecl> {
    let position = i.position();
    map(
        preceded(
            check_flags(keyword("mod"), |s| if s.in_function { Some(ParseErrorKind::IllegalModuleDef) } else { None }),
            terminated(ident, punct(";"))
        ),
        move |ident| ModuleDecl {
            position: position,
            ident   : ident,
        }
    )(i)
}

/// Matches a use declaration, e.g. `use frontend::parse_module;`.
fn use_decl(i: Input) -> Output<UseDecl> {
    fn use_item(i: Input) -> Output<Vec<(String, (String, bool))>> {
        alt((
            map(pair(path, delimited(pair(punct("::"), punct("{")), separated_list1(punct(","), use_item), punct("}") )), |(path, list)| {
                let mut flattened = Vec::new();
                let parent = parts_to_path(&path.segments);
                for elements in list  {
                    for (ident, (path, _)) in elements {
                        flattened.push((ident, (parent.clone() + "::" + &path, false)));
                    }
                }
                flattened
            }),
            map(pair(path, preceded(keyword("as"), ident)), |(path, ident)| {
                vec![(ident.name, (parts_to_path(&path.segments), false))]
            }),
            map(path, |path| {
                vec![(path.segments.last().unwrap().name.clone(), (parts_to_path(&path.segments), false))]
            }),
        ))(i)
    }
    let position = i.position();
    map(
        delimited(
            keyword("use"),
            use_item,
            punct(";")
        ),
        move |items| {
            UseDecl {
                position,
                mapping: items.into_iter().collect(),
            }
        }
    )(i)
}

/// Matches an inlineable type, e.g. `MyStruct` or `[ MyInt; 16 ]`.
fn inline_type(i: Input) -> Output<InlineType> {
    alt((
        map(path, |t| InlineType::TypeName(TypeName::from_path(t))),
        map(snap(callable_def), |f| InlineType::CallableDef(Box::new(f))),
        map(array_def, |a| InlineType::ArrayDef(Box::new(a))),
    ))(i)
}

/// Matches a callable type definition, e.g. `fn(u8) -> u16`.
fn callable_def(i: Input) -> Output<CallableDef> {
    fn parameter_list(i: Input) -> Output<Vec<InlineType>> {
        delimited(punct("("), separated_list0(punct(","), inline_type), punct(")"))(i)
    }
    fn return_part(i: Input) -> Output<InlineType> {
        preceded(punct("->"), inline_type)(i)
    }
    let position = i.position();
    map(
        tuple((keyword("fn"), parameter_list, opt(return_part))),
        move |sig| CallableDef {
            position,
            params: sig.1,
            ret: if let Some(sig_ty) = sig.2 { Some(sig_ty) } else { None },
            type_id: None,
        },
    )(i)
}

/// Matches an enum type definition.
fn enum_def(i: Input) -> Output<EnumDef> {
    fn variant(i: Input) -> Output<VariantDef> {
        let position = i.position();
        map(
            pair(
            ident,
            alt((
                map(
                    delimited(punct("("), separated_list0(punct(","), inline_type), preceded(opt(punct(",")), punct(")"))),
                    move |fields| VariantKind::Data(None, fields)
                ),
                map(
                    opt(preceded(punct("="), numeric_literal)),
                    move |variant_value| VariantKind::Simple(None, variant_value)
                ),
            ))),
            move |(ident, kind)| VariantDef {
                position,
                ident,
                kind,
            }
        )(i)
    }
    let position = i.position();
    let j = i.clone();
    map_result(
        pair(
            terminated(opt(keyword("pub")), check_flags(keyword("enum"), |s| if s.in_function { Some(ParseErrorKind::IllegalEnumDef) } else { None })),
            tuple((ident, punct("{"), separated_list1(punct(","), variant), opt(punct(",")), punct("}")))
        ),
        move |pair| {
            let mut have_data = false;
            let mut have_value = false;
            for variant in &pair.1.2 {
                match &variant.kind {
                    VariantKind::Data(_, _) => have_data = true,
                    VariantKind::Simple(_, d) if d.is_some() => have_value = true,
                    _ => {}
                }
            }
            if have_data && have_value {
                Err(Failure { input: j.clone(), kind: ParseErrorKind::IllegalVariantMix })
            } else {
                Ok(EnumDef {
                    position: position,
                    ident   : pair.1.0,
                    variants: pair.1.2,
                    type_id : None,
                    scope_id: j.scope_id(),
                    vis     : if pair.0.is_some() { Visibility::Public } else { Visibility::Private },
                })
            }
        }
    )(i)
}

/// Matches a struct type definition.
fn struct_def(i: Input) -> Output<StructDef> {
    fn field(i: Input) -> Output<(String, InlineType)> {
        map(
            tuple((word, punct(":"), inline_type)),
            |tuple| (tuple.0.to_string(), tuple.2)
        )(i)
    }
    fn fields(i: Input) -> Output<Vec<(String, InlineType)>> {
        map(
            separated_list1(punct(","), field),
            |list| {
                list.into_iter().map(|item| (item.0, item.1)).collect()
            }
        )(i)
    }
    let position = i.position();
    map(
        pair(
            terminated(opt(keyword("pub")), check_flags(keyword("struct"), |s| if s.in_function { Some(ParseErrorKind::IllegalStructDef) } else { None })),
            tuple((ident, punct("{"), fields, opt(punct(",")), punct("}")))
        ),
        move |pair| StructDef {
            position: position,
            ident   : pair.1.0,
            fields  : pair.1.2,
            type_id : None,
            vis     : if pair.0.is_some() { Visibility::Public } else { Visibility::Private },
        }
    )(i)
}

/// Matches a trait definition.
fn trait_def(i: Input) -> Output<TraitDef> {
    let position = i.position();
    let j = i.clone();
    with_scope(ScopeKind::Module, map(
        pair(
            terminated(opt(keyword("pub")), check_flags(keyword("trait"), |s| if s.in_function { Some(ParseErrorKind::IllegalTraitDef) } else { None })),
            tuple((ident, punct("{"), with_flags(&|flags| flags.in_trait = true, many0(function)), punct("}")))
        ),
        move |pair| TraitDef {
            position,
            functions   : pair.1.2,
            scope_id    : j.scope_id(),
            ident       : pair.1.0,
            type_id     : None,
            vis         : if pair.0.is_some() { Visibility::Public } else { Visibility::Private },
        }
    ))(i)
}

/// Matches an array type definition, e.g. `[ MyInt; 16 ]`
fn array_def(i: Input) -> Output<ArrayDef> {
    let position = i.position();
    map(
        delimited(punct("["), inline_type, punct("]")),
        move |ty| ArrayDef {
            position    : position,
            element_type: ty,
            type_id     : None,
        }
    )(i)
}

/// Matches an impl block, e.g. `impl MyStruct { ... }`
fn impl_block(i: Input) -> Output<ImplBlock> {
    let position = i.position();
    let j = i.clone();
    with_scope(ScopeKind::Module, map(
        preceded(
            check_flags(keyword("impl"), |s| if s.in_function { Some(ParseErrorKind::IllegalImplBlock) } else { None }),
            pair(inline_type, delimited(punct("{"), many0(function), punct("}")))
        ),
        move |tuple| ImplBlock {
            position    : position,
            functions   : tuple.1,
            scope_id    : j.scope_id(),
            ty          : tuple.0,
            trt         : None,
        }
    ))(i)
}

/// Matches a trait impl block, e.g. `impl MyTrait for MyStruct { ... }`
fn trait_impl_block(i: Input) -> Output<ImplBlock> {
    let position = i.position();
    let j = i.clone();
    with_scope(ScopeKind::Module, map(
        preceded(
            check_flags(keyword("impl"), |s| if s.in_function { Some(ParseErrorKind::IllegalImplBlock) } else { None }),
            pair(
                pair(terminated(path, keyword("for")), inline_type),
                delimited(punct("{"), many0(function), punct("}"))
            )
        ),
        move |tuple| ImplBlock {
            position    : position,
            functions   : tuple.1,
            scope_id    : j.scope_id(),
            ty          : tuple.0.1,
            trt         : Some(TypeName::from_path(tuple.0.0)),
        }
    ))(i)
}

/// Matches the return type part of a function definition, e.g. `-> u8`.
fn function_return_part(i: Input) -> Output<InlineType> {
    preceded(punct("->"), inline_type)(i)
}

/// Matches the parameter list of an anonymous function or closure definition (optionally specified types), e.g. `param1, param2: f64`.
fn function_inferrable_parameter_list(i: Input) -> Output<Vec<LetBinding>> {
    fn parameter(i: Input) -> Output<LetBinding> {
        let position = i.position();
        map(
            tuple((opt(keyword("mut")), var_decl, opt(preceded(punct(":"), inline_type)))),
            move |tuple| LetBinding {
                position    : position,
                binding_id  : tuple.1.binding_id,
                ident       : tuple.1.ident,
                expr        : None,
                mutable     : tuple.0.is_some(),
                ty          : tuple.2,
            }
        )(i)
    }
    separated_list0(punct(","), parameter)(i)
}

/// Transforms AST block results to explicit return statements, where possible.
fn function_transform_result(block: &mut Block, position: Position) {
    // transform block result to return statement
    if let Some(returns) = block.result.take() {
        block.statements.push(Statement::Return(Return {
            position: returns.position(),
            expr: returns,
        }));
    }
    // if the last block statement is still not a return statement, return void
    if block.control_flow() != Some(ControlFlowType::Return) {
        block.statements.push(Statement::Return(Return {
            expr: Expression::void(position),
            position: position,
        }));
    }
}

/// Matches a function implementation, e.g. `fn my_func(param: u64) -> f64 { ... }`.
fn function(i: Input) -> Output<Function> {
    fn parameter(i: Input) -> Output<LetBinding> {
        let position = i.position();
        map(
            tuple((opt(keyword("mut")), var_decl, punct(":"), inline_type)),
            move |tuple| LetBinding {
                position    : position,
                binding_id  : tuple.1.binding_id,
                ident       : tuple.1.ident,
                expr        : None,
                mutable     : tuple.0.is_some(),
                ty          : Some(tuple.3),
            }
        )(i)
    }
    fn signature(i: Input) -> Output<Signature> {
        map(
            tuple((
                terminated(opt(keyword("pub")), check_flags(keyword("fn"), |s| if s.in_function { Some(ParseErrorKind::IllegalFunctionDef) } else { None })),
                terminated(ident, punct("(")), terminated(separated_list0(punct(","), parameter), punct(")")), opt(function_return_part)
            )),
            |sig| Signature {
                ident   : sig.1,
                params    : sig.2,
                ret     : if let Some(sig_ty) = sig.3 { Some(sig_ty) } else { None },
                vis     : if sig.0.is_some() { Visibility::Public } else { Visibility::Private },
            },
        )(i)
    }
    let position = i.position();
    let j = i.clone();
    with_scope(ScopeKind::Function, map(
        tuple((signature, with_flags(&|flags| flags.in_function = true, alt((
            map(block, |b| Some(b)),
            map(check_flags(punct(";"), |f| if !f.in_trait { Some(ParseErrorKind::IllegalFunctionDecl) } else { None }), |_| None)
        ))))),
        move |(sig, mut block)| {
            if let Some(block) = &mut block {
                function_transform_result(block, position);
            }
            Function {
                shared: FunctionShared {
                    position,
                    sig,
                    block,
                    scope_id: j.scope_id(),
                },
                constant_id: None,
            }
        }
    ))(i)
}

/// Matches an anonymous function implementation, e.g. `fn(param: u64) -> f64 { ... }`.
fn anonymous_function(i: Input) -> Output<Function> {
    fn signature(i: Input) -> Output<Signature> {
        let position = i.position();
        map(
            preceded(
                check_flags(keyword("fn"), |s| if !s.in_function { Some(ParseErrorKind::IllegalClosure) } else { None }),
                pair(preceded(punct("("), function_inferrable_parameter_list), preceded(punct(")"), opt(function_return_part)))
            ),
            move |sig| Signature {
                ident   : Ident { name: format!("anonymous@{}", position), position },
                params    : sig.0,
                ret     : if let Some(sig_ty) = sig.1 { Some(sig_ty) } else { None },
                vis     : Visibility::Private,
            },
        )(i)
    }
    let position = i.position();
    let j = i.clone();
    with_scope(ScopeKind::Function, map(
        pair(signature, block),
        move |(sig, mut block)| {
            function_transform_result(&mut block, position);
            Function {
                shared: FunctionShared {
                    position,
                    sig,
                    block: Some(block),
                    scope_id: j.scope_id(),
                },
                constant_id: None,
            }
        }
    ))(i)
}

/// Matches a closure implementation, e.g. `|x: u8| -> u8 { x * 2 }`.
fn closure(i: Input) -> Output<Closure> {
    fn signature(i: Input) -> Output<Signature> {
        let position = i.position();
        map(
            preceded(
                check_flags(punct("|"), |s| if !s.in_function { Some(ParseErrorKind::IllegalClosure) } else { None }),
                pair(terminated(function_inferrable_parameter_list, punct("|")), opt(function_return_part))
            ),
            move |sig| {
                Signature {
                    ident   : Ident { name: format!("closure[{}]", position), position },
                    params    : sig.0,
                    ret     : if let Some(sig_ty) = sig.1 { Some(sig_ty) } else { None },
                    vis     : Visibility::Private,
                }
            }
        )(i)
    }
    let position = i.position();
    let j = i.clone();
    with_scope(ScopeKind::Closure, map(
        pair(signature, expression),
        move |(sig, expr)| {
            let required_bindings = j.take_required_bindings();
            // convert to block to allow for more reuse of Function specific code
            let mut block = if let Expression::Block(block) = expr {
                *block
            } else {
                j.push_scope(ScopeKind::Closure);
                let scope_id = j.scope_id();
                j.pop_scope(None);
                Block {
                    position: expr.position(),
                    statements: Vec::new(),
                    result: Some(expr),
                    scope_id,
                }
            };
            function_transform_result(&mut block, position);
            Closure {
                shared: FunctionShared { position, sig, block: Some(block), scope_id: j.scope_id() },
                required_bindings,
                function_id: None,
                struct_type_id: None,
            }
        }
    ))(i)
}

/// Matches a return statement.
fn return_statement(i: Input) -> Output<Return> {
    let position = i.position();
    map(
        preceded(
            check_flags(keyword("return"), |s| if s.in_function { None } else { Some(ParseErrorKind::IllegalReturn) }),
            terminated(opt(expression), punct(";"))
        ),
        move |m| Return {
            position,
            expr: m.unwrap_or_else(|| Expression::void(position)),
        }
    )(i)
}

/// Matches a literal numeric value, e.g. `3.14f64`.
fn numeric_literal(i: Input) -> Output<Literal> {
    /// Splits numerical value from its type suffix (if it has any)
    fn splits_numerical_suffix(n: &str) -> (&str, Option<&str>) {
        let tail = if n.len() > 3 {
            let tail = &n[n.len() - 3 ..];
            if &tail[0..1] != "u" && &tail[0..1] != "i" && &tail[0..1] != "f" {
                &tail[1..]
            } else {
                tail
            }
        } else if n.len() > 2 {
            &n[n.len() - 2 ..]
        } else {
            ""
        };

        if tail.len() == 2 && (tail == "u8" || tail == "i8") {
            (&n[0..n.len() - 2], Some(tail))
        } else if tail.len() == 3 && (&tail[0..1] == "u" || &tail[0..1] == "i" || &tail[0..1] == "f") && (&tail[1..] == "16" || &tail[1..] == "32" || &tail[1..] == "64") && tail != "f16" {
            (&n[0..n.len() - 3], Some(tail))
        } else {
            (n, None)
        }
    }

    /// Returns whether the given signed numerical is within range of the named type.
    fn check_signed_range(num: i64, type_name: Option<&str>) -> bool {
        match type_name {
            Some("i8")  => num >= i8::MIN as i64 && num <= i8::MAX as i64,
            Some("i16") => num >= i16::MIN as i64 && num <= i16::MAX as i64,
            Some("i32") => num >= i32::MIN as i64 && num <= i32::MAX as i64,
            Some("i64") => true,
            None        => true,
            _           => false,
        }
    }

    /// Returns whether the given unsigned numerical is within range of the named type.
    fn check_unsigned_range(num: u64, type_name: Option<&str>) -> bool {
        match type_name {
            Some("u8")  => num >= u8::MIN as u64 && num <= u8::MAX as u64,
            Some("u16") => num >= u16::MIN as u64 && num <= u16::MAX as u64,
            Some("u32") => num >= u32::MIN as u64 && num <= u32::MAX as u64,
            Some("u64") => true,
            None        => true,
            _           => false,
        }
    }

    /// Matches string starting with a digit and optionally continuing with digits and underscores.
    fn digits1(i: Input) -> Output<Input> {
        recognize(pair(
            take_while1(|m| is_digit(m as u8) || m == '_'),
            take_while(|m| is_digit(m as u8) || m == '_')
        ))(i)
    }

    let position = i.position();
    let j = i.clone();

    let (remaining, numerical) = terminated(
        recognize(tuple((
            opt(recognize(alt((punct("+"), punct("-"))))),
            digits1,
            opt(recognize(tuple((tag("."), not(punct(".")), digit0)))), // not(.) to avoid matching ranges
            opt(recognize(tuple((one_of("iuf"), alt((tag("8"), tag("16"), tag("32"), tag("64")))))))
        ))),
        space0
    )(i)?;

    let (value, type_name) = splits_numerical_suffix(*numerical);

    if value.contains(".") || type_name == Some("f32") || type_name == Some("f64") {
        if let Ok(float) = str::parse::<f64>(&value.replace(&[ ' ', '_' ], "")) {
            return Ok((remaining, Literal {
                position    : position,
                value       : LiteralValue::Numeric(Numeric::Float(float)),
                type_name   : type_name.map(|ty| TypeName::from_str(ty, position)), // TODO: this is the position of the number, not just the type suffix
                type_id     : None,
            }));
        }
    } else if value.starts_with("-") || type_name == Some("i8") || type_name == Some("i16") || type_name == Some("i32") || type_name == Some("i64") {
        if let Ok(integer) = str::parse::<i64>(&value.replace(&[ ' ', '_' ], "")) {
            if check_signed_range(integer, type_name) {
                return Ok((remaining, Literal {
                    position    : position,
                    value       : LiteralValue::Numeric(Numeric::Signed(integer)),
                    type_name   : type_name.map(|ty| TypeName::from_str(ty, position)), // TODO: this is the position of the number, not just the type suffix
                    type_id     : None,
                }));
            }
        }
    } else {
        if let Ok(integer) = str::parse::<u64>(&value.replace(&[ ' ', '_' ], "")) {
            if check_unsigned_range(integer, type_name) {
                return Ok((remaining, Literal {
                    position    : position,
                    value       : LiteralValue::Numeric(Numeric::Unsigned(integer)),
                    type_name   : type_name.map(|ty| TypeName::from_str(ty, position)), // TODO: this is the position of the number, not just the type suffix
                    type_id     : None,
                }));
            }
        }
    }

    Err(nom::Err::Failure(Failure { input: j, kind: ParseErrorKind::InvalidNumerical }))
}

/// Matches a literal boolean value, e.g. `true`.
fn bool_literal(i: Input) -> Output<Literal> {
    let position = i.position();
    map(alt((keyword("true"), keyword("false"))), move |m| {
        Literal {
            position    : position,
            value       : LiteralValue::Bool(m == "true"),
            type_name   : None,
            type_id     : None,
        }
    })(i)
}

/// Matches a string. Since strings support variable interpolation they need to be represented as expressions.
fn string_literal(i: Input) -> Output<Expression> {

    let position = i.position();

    enum StringFragment<'a> {
        Literal(&'a str),
        EscapedChar(char),
        Interpolation(Expression),
    }

    fn fragments(i: Input) -> Output<Vec<StringFragment>> {
        // gather fragments into a vector
        fold_many0(
            alt((
                map(parse_literal, |l| StringFragment::Literal(&l.data)),
                map(parse_escaped_char, |e| StringFragment::EscapedChar(e)),
                map(delimited(punct("{"), expression, char('}')), |i| StringFragment::Interpolation(i)), // intentionally not tailing punct("}") to not consume whitespace in the string
            )),
            Vec::new,
            |mut vec, fragment| {
                vec.push(fragment);
                vec
            },
        )(i)
    }

    map(delimited(char('"'), fragments, punct("\"")), move |mut fragments| {  // intentionally not leading punct("\"") to not consume whitespace in the string

        let add = |left, right| Expression::BinaryOp(Box::new(BinaryOp {
            position,
            op: BinaryOperator::Add,
            left: BinaryOperand::Expression(left),
            right: BinaryOperand::Expression(right),
            type_id: None,
        }));

        let lit = |string| Expression::Literal(Literal {
            position,
            value: LiteralValue::String(string),
            type_name: None,
            type_id: None,
        });

        let cast = |left| Expression::BinaryOp(Box::new(BinaryOp {
            position,
            op: BinaryOperator::Cast,
            left: BinaryOperand::Expression(left),
            right: BinaryOperand::TypeName(TypeName::from_str("String", position)),
            type_id: None,
        }));

        let mut current_string = "".to_string();
        let mut ast: Option<Expression> = None;

        // construct AST from fragments
        for fragment in fragments.drain(..) {
            match fragment {
                StringFragment::Literal(l) => current_string.push_str(l),
                StringFragment::EscapedChar(c) => current_string.push(c),
                StringFragment::Interpolation(interpolation) => {
                    let current = if current_string.len() == 0 {
                        cast(interpolation)
                    } else {
                        add(
                            lit(replace(&mut current_string, "".to_string())),
                            cast(interpolation)
                        )
                    };
                    if let Some(prev) = ast {
                        ast = Some(add(prev, current));
                    } else {
                        ast = Some(current);
                    }
                },
            }
        }

        if current_string.len() > 0 {
            if let Some(prev) = ast {
                ast = Some(add(prev, lit(current_string)));
            } else {
                ast = Some(lit(current_string));
            }
        }

        ast.unwrap_or_else(|| lit("".to_string()))

    })(i)
}

/// Matches an array literal, e.g. `[ 1u8, 2, 3 ]`. Even though array literals may contain expressions, these are
/// wrapped in a literal value, allowing us to return a Literal here.
fn array_literal(i: Input) -> Output<Literal> {
    let position = i.position();
    map(
        tuple((punct("["), separated_list0(punct(","), expression), opt(punct(",")), punct("]"))),
        move |m| Literal {
            position    : position,
            value: LiteralValue::Array(ArrayLiteral {
                elements: m.1,
            }),
            type_name   : None,
            type_id     : None,
        }
    )(i)
}

/// Matches a struct literal, e.g. `MyStruct { left: 123, right: 234 }`.
fn struct_literal(i: Input) -> Output<Literal> {
    fn field(i: Input) -> Output<(String, Expression)> {
        map(
            tuple((word, punct(":"), expression)),
            |tuple| (tuple.0.to_string(), tuple.2)
        )(i)
    }
    fn fields(i: Input) -> Output<UnorderedMap<String, Expression>> {
        map(
            separated_list1(punct(","), field),
            |list| {
                list.into_iter().map(|item| (item.0, item.1)).collect()
            }
        )(i)
    }
    let position = i.position();
    map(
        tuple((path, punct("{"), fields, opt(punct(",")), punct("}"))),
        move |m| Literal {
            position    : position,
            value: LiteralValue::Struct(StructLiteral {
                fields: m.2,
            }),
            type_name   : Some(TypeName::from_path(m.0)),
            type_id     : None,
        }
    )(i)
}

/// Matches a literal, i.e. one of the above.
fn literal(i: Input) -> Output<Expression> {
    alt((
        map(bool_literal, |l| Expression::Literal(l)),
        string_literal,
        map(array_literal, |l| Expression::Literal(l)),
        map(struct_literal, |l| Expression::Literal(l)),
        map(numeric_literal, |l| Expression::Literal(l)),
    ))(i)
}
